refactor: AllayBlockType
Deprecated AllayVanillaBlockPaletteRegistry and add
AllayBlockPaletteRegistry